# Discord_bot

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  settings.py
ai_chatgpt/: chat_bot.py
bot/: client.py  event_controller.py  parsing_handlers.py  server_events.py  session.py  users_commands.py  validators.py  view_lists.py  web_responses.py
database/: database_connection.py
database/models/: __init__.py  base.py  bot.py  command.py  event.py  message.py  reaction.py  user.py
discord_bot/: bot_client.py  bot_session.py  client.py  main.py  server_events.py  session.py  users_commands.py
tests/test_database/: conftest.py  test_sql_schema.py
utils/: settings.py
