[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["rafiwts <rafiwts@gmail.com>"]
readme = "README.md"
packages = [{include = "discord_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.1"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
peewee = "^3.16.2"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
